test/e2e/invalid/bufwrite_nonbuffer.mylang
{
    define mut x of int32 = 5;
    x[0] = 42;
}
